--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <!-- marathon mode -->
     <string name="menu_page_challenge_button">Challenge</string>
     <string name="menu_page_leaderboard_button">Leaderboard</string>
+    <string name="menu_page_settings_button">Settings</string>
     <string name="menu_page_quit_button">Quit</string>
     <string name="menu_page_credits">Made by Ahmed MOUSSA &amp; Kévin LEGENDRE</string>
 
@@ -44,5 +45,11 @@
     <string name="leaderboard_player_name">Name:</string>
     <string name="leaderboard_player_score">Score:</string>
     <string name="leaderboard_player_rank">Rank:</string>
+
+    <!--===============-->
+    <!-- Settings page -->
+    <!--===============-->
+    <string name="settings_title">PokeGuess settings</string>
+
 
 </resources>
