mergeded our work

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="menu_page_challenge_button">Challenge</string>
     <string name="menu_page_leaderboard_button">Leaderboard</string>
     <string name="menu_page_settings_button">Settings</string>
+    <string name="menu_page_api_status">API status</string>
     <string name="menu_page_quit_button">Quit</string>
     <string name="menu_page_credits">Made by Ahmed MOUSSA &amp; Kévin LEGENDRE</string>
 
