UI changes, added difficulty selection, classic leaderboard and much more

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,12 @@
     <!-- Settings page -->
     <!--===============-->
     <string name="settings_title">PokeGuess settings</string>
+    <string name="settings_warning">App needs to restart for the settings to apply!</string>
+    <string name="settings_save_button">Save</string>
 
+    <!--====================-->
+    <!-- Diff selector page -->
+    <!--====================-->
+    <string name="diff_selector_title">Choose a difficulty</string>
 
 </resources>
