Added sound for navigation and guesses, fixed setting crash issues, adder custom buttons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,7 +52,7 @@
     <!-- Settings page -->
     <!--===============-->
     <string name="settings_title">PokeGuess settings</string>
-    <string name="settings_warning">App needs to restart for the settings to apply!</string>
+    <string name="settings_warning">App needs to restart for the generation settings to apply!</string>
     <string name="settings_save_button">Save</string>
 
     <!--====================-->
